force-app/main/default/objects/Proposal_Context__c/Proposal_Context__c.object-meta.xml
<CustomObject>
    <label>提案書コンテキスト</label>
    <pluralLabel>提案書コンテキスト</pluralLabel>
    <nameField>
        <label>提案書コンテキスト名</label>
        <type>AutoNumber</type>
        <displayFormat>PC-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>商談に紐づく提案書のテキスト抽出結果を格納するオブジェクト。マルチモーダルLLM（Claude Vision）によるPPTX/PDF解析結果を保持し、サマリカード生成の主たるコンテキスト源として利用する。</description>
</CustomObject>