force-app/main/default/objects/Proposal_Context__c/fields/Extracted_At__c.field-meta.xml
<CustomField>
    <fullName>Extracted_At__c</fullName>
    <label>抽出完了日時</label>
    <type>DateTime</type>
</CustomField>