force-app/main/default/objects/Proposal_Context__c/fields/Extracted_Text__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Text__c</fullName>
    <label>抽出テキスト</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>