force-app/main/default/objects/Proposal_Context__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Status__c</fullName>
    <label>抽出ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>処理中</fullName>
                <default>true</default>
                <label>処理中</label>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>エラー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>