force-app/main/default/objects/Proposal_Context__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>ファイル名</label>
    <type>Text</type>
    <length>255</length>
</CustomField>