force-app/main/default/objects/Proposal_Context__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <label>ファイルURL</label>
    <type>Url</type>
</CustomField>