force-app/main/default/objects/Proposal_Context__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>商談</label>
    <type>MasterDetail</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>提案書コンテキスト</relationshipLabel>
    <relationshipName>Proposal_Contexts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>