force-app/main/default/objects/Proposal_Context__c/fields/Slide_Count__c.field-meta.xml
<CustomField>
    <fullName>Slide_Count__c</fullName>
    <label>スライド枚数</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>